# hide-and-seek

./: .gitignore  NOTES.md  STAGE5_PLAN.md  env.py  env_hs.py  eval_cross.py  eval_headless.py  eval_hs.py  eval_hs2.py  eval_hs7.py  eval_hs7_lstm.py  hider.pt  hs_2v2_hider.pt  hs_2v2_seeker.pt  hs_2v2c_hider.pt  hs_2v2c_hider_final.pt  hs_2v2c_seeker.pt  hs_2v2c_seeker_final.pt  hs_arc4_hider.pt  hs_arc4_seeker.pt  hs_arcv3_hider.pt  hs_arcv3_seeker_final.pt  hs_hider.pt  hs_lstm20m_hider.pt  hs_lstm20m_seeker.pt  hs_lstm_hider.pt  hs_lstm_hider_final.pt  hs_lstm_seeker.pt  hs_lstm_seeker_final.pt  hs_lstmrc3_hider.pt  hs_lstmrc3_seeker.pt  hs_lstmrc_hider.pt  hs_lstmrc_hider_final.pt  hs_lstmrc_seeker.pt  hs_lstmrc_seeker_final.pt  hs_mega1v1_hider.pt  hs_mega1v1_seeker.pt  hs_open_hider.pt  hs_open_seeker.pt  hs_ramp_hider.pt  (+38 more)
hide_and_seek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
