[project]
name = "hide-and-seek"
version = "0.1.0"
description = "Hide-and-seek with PPO reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "pymunk>=7.0",
    "pygame>=2.5",
    "pettingzoo>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
